--- a/public/index.html
+++ b/public/index.html
@@ -18,12 +18,45 @@
 
 <body>
  <div class="mx-auto max-w-240 mt-8 p-4">
-    <nav class="flex justify-between">
+    <nav class="flex justify-between mb-8 items-center">
     <h1 class="font-black text-4xl">Pet Bird API</h1>
-    <ul class="flex gap-8">
+<div class="md:hidden  p-4 z-40">
+
+  <!-- peer MUST be first -->
+  <input
+    id="menu"
+    type="checkbox"
+    class="peer hidden"
+  />
+
+  <!-- toggle icon -->
+  <label for="menu" class="text-2xl cursor-pointer z-50 relative peer-checked:hidden">
+    <span class="">☰</span>
+  </label>
+    <label for="menu" class="text-2xl cursor-pointer z-50 relative hidden peer-checked:inline">
+     
+    <span class="peer-checked:text-6xl">✕</span>
+  </label>
+
+  <!-- menu -->
+  <ul
+    class="fixed top-0 right-0 h-full w-2/3 bg-white shadow-2xl p-4
+           translate-x-full peer-checked:translate-x-0
+           transition-transform duration-300"
+  >
+    <li class="font-bold mb-4"><a class="active:font-black">Home</a></li>
+    <li class="font-bold mb-4"><a>Upload</a></li>
+  </ul>
+
+</div>
+
+
+    <ul class="hidden md:flex gap-8 items-center">
       <li><a href="/">Home</a></li>
       <li><a href="/upload">Upload Image</a></li>
-      <li class="theme-selector cursor-pointer" onclick="toggleTheme(event)">🔆</li>
+      <li onclick="toggleTheme(event)">
+        <button class="btn theme-selector cursor-pointer">🔆</button>
+      </li>
     </ul>
   </nav>
     <div class="md:grid grid-cols-2 gap-32">
@@ -76,7 +109,7 @@
                 <p class="hidden mt-2 text-red-500 font-black no-image-alert">No Images found</p>
             </form>
         </div>
-        <div class="max-w-120 mt-10 md:m-0">
+        <div class="w-full mt-10 md:m-0">
             <img class="w-full rounded-lg" src="https://images.unsplash.com/photo-1600098398998-b76eef086036?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8cGV0JTIwcGFycm90fGVufDB8fDB8fHww"/>
         </div>
     </div>
