--- a/public/upload/index.html
+++ b/public/upload/index.html
@@ -16,14 +16,21 @@
 </head>
 <body>
  <div class="mx-auto max-w-240 mt-8 p-4">
-  <nav class="flex justify-between">
+  <nav class="flex justify-between items-center mb-8">
     <h1 class="font-black  text-4xl">Pet Bird API</h1>
-    <ul class="flex gap-8">
+    <div class="inline md:hidden text-2xl relative">
+      <label for="sidebar-toggler">☰</label>
+      <input id="sidebar-toggler" class="absolute left-0 -z-40 opacity-0" type="checkbox"/>
+    </div>
+    <ul class="hidden md:flex items-center gap-8">
       <li><a href="/">Home</a></li>
       <li><a href="/upload">Upload Image</a></li>
-      <li class="theme-selector cursor-pointer" onclick="toggleTheme(event)">🔆</li>
+      <li class="" onclick="toggleTheme(event)">
+        <button class="btn theme-selector cursor-pointer">🔆</button>
+      </li>
     </ul>
-  </nav>  
+  </nav>
+  
     <div class="toast toast-top toast-end hidden notification-success">
       <div class="alert alert-success text-white">
         <span>Your image has been uploaded successfully.</span>
