mobile sidebar menu

--- a/public/upload/index.html
+++ b/public/upload/index.html
@@ -42,8 +42,8 @@
            translate-x-full peer-checked:translate-x-0
            transition-transform duration-300"
   >
-    <li class="font-bold mb-4"><a class="visited:font-black" href="/">Home</a></li>
-    <li class="font-bold mb-4"><a aria-current="page" class="aria-[current=page]:font-black" class="visited:font-black" href="/upload">Upload</a></li>
+    <li class="font-bold mb-4"><a  href="/">Home</a></li>
+    <li class="font-bold mb-4"><a aria-current="page" class="aria-[current=page]:font-black" href="/upload">Upload</a></li>
   </ul>
 
 </div>
