--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
             </form>
         </div>
         <div class="w-full mt-10 md:m-0">
-            <img class="w-full rounded-lg" src="https://images.unsplash.com/photo-1600098398998-b76eef086036?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8cGV0JTIwcGFycm90fGVufDB8fDB8fHww"/>
+            <img class="w-full lg:max-w-120 rounded-lg" src="https://images.unsplash.com/photo-1600098398998-b76eef086036?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8cGV0JTIwcGFycm90fGVufDB8fDB8fHww"/>
         </div>
     </div>
  </div>
